docs/core/v0.3/_sources/reference/tmlt/core/transformations/spark_transformations/persist/index.rst.txt



**************
persist
**************

.. py:module:: tmlt.core.transformations.spark_transformations.persist

.. autoapi-nested-parse::

   Transformations for persisting and un-persisting Spark DataFrames.

   #TODO(#1653): Add link to the Spark Abstraction page.











Classes
=======

.. list-table::

   * - :class:`.Persist`
     - Persists a Spark DataFrame.
   * - :class:`.Unpersist`
     - Unpersists a Spark DataFrame.
   * - :class:`.SparkAction`
     - Triggers an action on a Spark DataFrame.

   
.. py:class:: Persist(domain, metric)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Persists a Spark DataFrame.

   This is an identity transformation that marks the input Spark DataFrame to be
   stored when evaluated by Spark.

   .. note::

      This transformation does not eagerly evaluate and store the input DataFrame.
      Spark only stores it when an action (like collect) is performed. If you want
      to persist eagerly, chain this transformation with a :class:`~.SparkAction`.






   .. automethod:: __init__
   .. py:method:: stability_function(self, d_in)

      Returns the smallest d_out satisfied by the transformation.

      The returned d_out is d_in.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(self, data)

      Returns input DataFrame.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: output_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: stability_relation(self, d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(self, other: Transformation) -> Transformation
               __or__(self, other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: Unpersist(domain, metric)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Unpersists a Spark DataFrame.

   This is an identity transformation that marks a persisted DataFrame to
   be evicted. If the input DataFrame is not persisted, this has no effect.






   .. automethod:: __init__
   .. py:method:: stability_function(self, d_in)

      Returns the smallest d_out satisfied by the transformation.

      The returned d_out is d_in.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(self, data)

      Returns input DataFrame.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: output_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: stability_relation(self, d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(self, other: Transformation) -> Transformation
               __or__(self, other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.



   
.. py:class:: SparkAction(domain, metric)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Triggers an action on a Spark DataFrame.

   This is intended to be used after :class:`~.Persist` to eagerly
   evaluate and store a :class:`~.Transformation`\ 's output.






   .. automethod:: __init__
   .. py:method:: stability_function(self, d_in)

      Returns the smallest d_out satisfied by the transformation.

      The returned d_out is d_in.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(self, data)

      Returns input DataFrame.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: output_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: stability_relation(self, d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(self, other: Transformation) -> Transformation
               __or__(self, other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.






